# chess-cpp

./: README.md
backend/: CMakeLists.txt  build.sh
backend/app/: main.cpp
backend/gameplay/board/include/: board.h
backend/gameplay/board/src/: board.cpp
backend/gameplay/piece/include/: piece.h
backend/gameplay/piece/src/: piece.cpp
